--- a/react-w-ui/public/index.html
+++ b/react-w-ui/public/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://d9t5qjot8jvsq.cloudfront.net/client-assets/bayadcenter/biller-assets/1574302411lZqx." />
+    <link
+      rel="icon"
+      href="https://d9t5qjot8jvsq.cloudfront.net/client-assets/bayadcenter/biller-assets/1574302411lZqx."
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Poppins"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
